# overlord-zellij

./: .gitignore  Cargo.toml  HANDOVER.md  Makefile  README.ja.md  README.md
claude/rituals/: glacier.md  inferno.md  overlord.md  shadow.md  storm.md  strategist.md
claude/skills/ovld-grow/: SKILL.md
layouts/: army.kdl
openspec/changes/archive/2026-02-04-document-ovld-specs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-04-migrate-to-shitennou/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-08-add-i18n-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-08-add-init-force/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-08-add-mcp-relay/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-08-cleanup-exited-session/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-08-fix-summon-attach-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-08-rename-slay-to-unsummon/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-11-improve-dashboard/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-15-sandbox-exec-write-restriction/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-16-autonomous-ritual-update/: tasks.md
openspec/changes/autonomous-ritual-update/: design.md  proposal.md  tasks.md
openspec/specs/army-hierarchy/: spec.md
openspec/specs/auto-notification/: spec.md
openspec/specs/config-management/: spec.md
openspec/specs/dashboard/: spec.md
openspec/specs/i18n/: spec.md
openspec/specs/mcp-relay/: spec.md
openspec/specs/ovld-cli/: spec.md
openspec/specs/ritual-injection/: spec.md
openspec/specs/sandbox/: spec.md
openspec/specs/session-registry/: spec.md
openspec/specs/workflow-protocol/: spec.md
openspec/specs/zellij-session/: spec.md
plugin/: Cargo.toml
plugin/src/: main.rs
rituals/: glacier.md  inferno.md  legion_debug.md  legion_docs.md  legion_impl.md  overlord.md  shadow.md  storm.md  strategist.md
src/: config.rs  error.rs  i18n.rs  layout.kdl.j2  layout.rs  lib.rs  logging.rs  main.rs  sandbox.rs
src/army/: mod.rs  ritual.rs  roles.rs
src/commands/: dashboard.rs  init.rs  mod.rs  slay.rs  status.rs  summon.rs  unsummon.rs
src/relay/: mod.rs  notify.rs  server.rs  store.rs  types.rs
src/zellij/: mod.rs  pane.rs  session.rs
(+44 files in other folders)
